--- a/_includes/author.html
+++ b/_includes/author.html
@@ -1,9 +1,9 @@
 <section class="author">
-  <div class="authorimage box" style="background: url({{site.baseurl}}/assets/img/Taffy.jpg)"></div>
+  <div class="authorimage box" style="background: url({{site.baseurl}}/assets/img/pon.jpg)"></div>
   <div class="authorinfo box">
-    <p>Author | David Lin</p>
+    <p>Author | Yuuto Onga</p>
     <p class="bio">
-      Currently a Ph.D. student in Singapore University of Technology and Design in the area of Human-Computer Interaction(HCI).
+      An undergraduate student in the Faculty of Scientce and Engineering, Department of Applied Informatics at Hosei University. 
     </p>
   </div>
 </section>
