--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
 
   <footer class="article-footer">
 
-  {% include share.html %}
+  <data data-icon="ei-archive"></data> {{ page.category }}
 
   <hr/>
 
