卒業したぞ

--- a/_includes/author.html
+++ b/_includes/author.html
@@ -3,7 +3,7 @@
   <div class="authorinfo box">
     <p>Author | Yuuto Onga</p>
     <p class="bio">
-      An undergraduate student in the Faculty of Scientce and Engineering, Department of Applied Informatics at Hosei University. 
+      A graduated student in the Faculty of Scientce and Engineering, Department of Applied Informatics at Hosei University. 
     </p>
   </div>
 </section>
